--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 .wrap {
   width: 375px;
   margin: 0 auto;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* border: 1px solid black; */
 
   /* toastify */
