--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,18 @@
 }
 
 .wrap {
-  width: 375px;
+  width: 23.4375rem;
   margin: 0 auto;
-  /* overflow-x: hidden; */
-  /* border: 1px solid black; */
+  /* @media screen and (min-width: 744px) {
+    width: 744px;
+  }
+  @media screen and (max-width: 743px) and (min-width: 376px) {
+    width: 100vw;
+  }
+  @media screen and (max-width: 375px) {
+    width: 100vw;
+    margin: 0 auto;
+  } */
 
   /* toastify */
 
