--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,15 @@
 
 .wrap {
   width: 23.4375rem;
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
-  /* @media screen and (min-width: 744px) {
+  @media screen and (max-width: 743px) and (min-width: 376px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 744px) {
     width: 744px;
   }
-  @media screen and (max-width: 743px) and (min-width: 376px) {
-    width: 100vw;
-  }
-  @media screen and (max-width: 375px) {
-    width: 100vw;
-    margin: 0 auto;
-  } */
 
   /* toastify */
 
