--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  /* position: fixed; */
   @media screen and (max-width: 743px) and (min-width: 376px) {
     width: 100%;
   }
