--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 }
 
 .Toastify__toast--error {
-  border: 1px solid #eb5757;
+  color: white;
   border-radius: 30px !important;
   background-color: #000 !important;
   text-align: center;
@@ -82,7 +82,7 @@
 }
 
 .Toastify__toast--success {
-  border: 1px solid #eb5757;
+  color: white;
   border-radius: 30px !important;
   background-color: #000 !important;
   text-align: center;
