Design: tostify 알림 디자인 변경, Feat: 수정/삭제 모달 제작

--- a/src/App.css
+++ b/src/App.css
@@ -73,20 +73,22 @@
 
 .Toastify__toast--error {
   color: white;
-  border-radius: 30px !important;
-  background-color: #000 !important;
   text-align: center;
-  font-family: Pretendard;
+  border-radius: 30px;
   font-size: 14px;
   font-weight: 600;
 }
 
 .Toastify__toast--success {
   color: white;
-  border-radius: 30px !important;
-  background-color: #000 !important;
   text-align: center;
-  font-family: Pretendard;
+  border-radius: 30px;
   font-size: 14px;
   font-weight: 600;
+}
+
+.Toastify__toast-container--top-center {
+  top: 0;
+  left: 50% !important ;
+  transform: translateX(-50%) !important;
 }
