--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 
 * {
   font-family: 'Pretendard-Regular';
-  font-size: 16px;
 }
 
 .wrap {
@@ -21,6 +20,25 @@
   }
   @media screen and (min-width: 744px) {
     width: 744px;
+  }
+
+  /* quill */
+
+  .ql-editor img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .ql-snow .ql-editor .ql-size-huge {
+    font-size: 30px !important;
+  }
+
+  .ql-snow .ql-editor .ql-size-large {
+    font-size: 24px !important;
+  }
+
+  .ql-snow .ql-editor .ql-size-normal {
+    font-size: 18px !important;
   }
 
   /* toastify */
