Docs: 에디터 불필요한 코드 제거

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   }
   @media screen and (min-width: 744px) {
     width: 744px;
+    font-size: 16px;
   }
 
   /* quill */
@@ -29,16 +30,32 @@
     height: auto;
   }
 
-  .ql-snow .ql-editor .ql-size-huge {
-    font-size: 30px !important;
+  @media screen and (min-width: 747px) {
+    .ql-snow .ql-editor .ql-size-huge {
+      font-size: 24px !important;
+    }
+
+    .ql-snow .ql-editor .ql-size-large {
+      font-size: 20px !important;
+    }
+
+    .ql-snow .ql-editor .ql-size-normal {
+      font-size: 16px !important;
+    }
   }
 
-  .ql-snow .ql-editor .ql-size-large {
-    font-size: 24px !important;
-  }
+  @media screen and (min-width: 375px) and (max-width: 746px) {
+    .ql-snow .ql-editor .ql-size-huge {
+      font-size: 20px !important;
+    }
 
-  .ql-snow .ql-editor .ql-size-normal {
-    font-size: 18px !important;
+    .ql-snow .ql-editor .ql-size-large {
+      font-size: 16px !important;
+    }
+
+    .ql-snow .ql-editor .ql-size-normal {
+      font-size: 14px !important;
+    }
   }
 
   /* toastify */
